# Flugbuch

./: .gitignore  Flugbuch.py  README.md  pyproject.toml
assets/: terrain_viewer.js
flugbuch/: __init__.py  coordinates.py  dashboard.py  flight.py  imagery.py  landcover.py  plots.py  terrain.py
