[project]
name = "soar"
version = "0.1.0"
description = ""
authors = [
    { name = "Philipp", email = "hallo@phipi.ch" },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "circle-fit>=0.2.1,<0.3.0",
    "dash>=4.3.0,<5.0.0",
    "fiona>=1.9.5,<2.0.0",
    "fqdn>=1.5.1,<2.0.0",
    "geopandas>=0.14.3,<0.15.0",
    "isoduration>=20.11.0,<21.0.0",
    "jsonpointer>=2.4,<3.0",
    "joblib>=1.3.2,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "jupyter-dash>=0.4.2,<0.5.0",
    "jupyterlab>=4.0.5,<5.0.0",
    "matplotlib>=3.7.2,<4.0.0",
    "numpy>=1.25.2,<2.0.0",
    "pathlib2>=2.3.7.post1,<3.0.0",
    "pathvalidate>=3.2.0,<4.0.0",
    "pip-chill>=1.0.3,<2.0.0",
    "rasterio>=1.3.9,<2.0.0",
    "requests-cache>=1.2.0,<2.0.0",
    "scikit-image>=0.21.0,<0.22.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "shapely>=2.0.1,<3.0.0",
    "suncalc>=0.1.3,<0.2.0",
    "tqdm>=4.66.1,<5.0.0",
    "uri-template>=1.3.0,<2.0.0",
    "webcolors>=1.13,<2.0",
    "mapbox-vector-tile>=2.0.1,<3.0.0",
    "mercantile>=1.2.1,<2.0.0",
]

[tool.uv]
package = false
